fix(alert): [B2BDS-218] Align error icon on the top for long text

--- a/packages/core-components/src/components/alert/alert.scss
+++ b/packages/core-components/src/components/alert/alert.scss
@@ -46,7 +46,6 @@
 
   &__content {
     display: flex;
-    align-items: center;
     flex: 2;
     gap: var(--b2b-size-30);
 
